# TIA

./: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt  sample_assets.csv  sendtc.ps1
.streamlit/: config.toml
AlgoEngine/: __init__.py  dummy_exchange.py  exchange_simulator.py
TIA-Sub/: README.md  pyproject.toml
TIA-Sub/tests/: test_client_simulator.py  test_exchange_simulator.py  test_local_trading_engine.py
app/: __init__.py  ui.py
app/AlgoEngine/: __main__.py  client_simulator.py  local_engine.py
app/agents/: __init__.py  bad_price_breach.py  base.py  crossed_market.py  duplicate_order.py  favorable_adverse_move.py  kill_switch.py  locked_market.py  market_order_check.py  max_evaluation_frequency.py  one_sided_market.py  parent_child.py  rapid_move_retrace.py  registry.py
app/investigation_agents/: __init__.py  base.py  critic.py  engine.py  market.py  order.py  planner.py  regulatory.py  synthesizer.py
app/knowledge/: __init__.py  control_catalog.py  repository.py
app/models/: __init__.py  investigation.py  knowledge.py  validation.py
app/rules/: __init__.py  compliance_rules.yaml  rule_engine.py
docs/: Demo narration.xlsx  SOP_RUNBOOK.md  Tia-Agentic-AI-Architecture-3Slides.pptx  Tia-Agentic-AI-Architecture-3Slides.pptx.inspect.ndjson  Tia-Agentic-AI-Deck-Audience - Save.pptx  Tia-Agentic-AI-Deck-Audience.pptx.inspect.ndjson  Tia-Agentic-AI-Deck.pptx.inspect.ndjson
outputs/: algoengine_dummy_exchange_messages.jsonl
tests/: __init__.py  test_exchange_simulator.py  test_process_manager.py  test_validation_platform.py
(+11 files in other folders)
