[project]
name = "algo-engine"
version = "0.1.0"
description = "Local TCP trading engine for trade investigation agent validation demos."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["AlgoEngine*"]
